CREATE TABLE "usuarios" (
  "id_usuario" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "nome" varchar(100) NOT NULL,
  "email" varchar(150) UNIQUE NOT NULL,
  "senha" varchar(255) NOT NULL,
  "ativo" boolean NOT NULL DEFAULT true,
  "criado_em" timestamptz DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE "categorias" (
  "id_categoria" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_usuario" integer NOT NULL,
  "nome" varchar(50) NOT NULL,
  "descricao" text,
  "criado_em" timestamptz DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE "transacoes" (
  "id_transacao" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_usuario" integer NOT NULL,
  "id_categoria" integer NOT NULL,
  "descricao" varchar(200) NOT NULL,
  "valor" numeric(12,2) NOT NULL,
  "tipo" varchar(10) NOT NULL,
  "data_transacao" date NOT NULL,
  "criado_em" timestamptz DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE "contas_a_pagar" (
  "id_conta_pagar" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_usuario" integer NOT NULL,
  "id_categoria" integer NOT NULL,
  "descricao" varchar(200) NOT NULL,
  "valor" numeric(12,2) NOT NULL,
  "data_vencimento" date NOT NULL,
  "status" varchar(10) NOT NULL DEFAULT 'PENDENTE',
  "data_pagamento" date,
  "criado_em" timestamptz DEFAULT (CURRENT_TIMESTAMP)
);

CREATE TABLE "contas_a_receber" (
  "id_conta_receber" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_usuario" integer NOT NULL,
  "id_categoria" integer NOT NULL,
  "descricao" varchar(200) NOT NULL,
  "valor" numeric(12,2) NOT NULL,
  "data_vencimento" date NOT NULL,
  "status" varchar(10) NOT NULL DEFAULT 'PENDENTE',
  "data_recebimento" date,
  "criado_em" timestamptz DEFAULT (CURRENT_TIMESTAMP)
);

CREATE INDEX "idx_usuarios_email" ON "usuarios" ("email");

COMMENT ON COLUMN "transacoes"."valor" IS 'valor > 0';

COMMENT ON COLUMN "contas_a_pagar"."valor" IS 'valor > 0';

COMMENT ON COLUMN "contas_a_receber"."valor" IS 'valor > 0';

ALTER TABLE "categorias" ADD FOREIGN KEY ("id_usuario") REFERENCES "usuarios" ("id_usuario") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "transacoes" ADD FOREIGN KEY ("id_usuario") REFERENCES "usuarios" ("id_usuario") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "transacoes" ADD FOREIGN KEY ("id_categoria") REFERENCES "categorias" ("id_categoria") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "contas_a_pagar" ADD FOREIGN KEY ("id_usuario") REFERENCES "usuarios" ("id_usuario") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "contas_a_pagar" ADD FOREIGN KEY ("id_categoria") REFERENCES "categorias" ("id_categoria") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "contas_a_receber" ADD FOREIGN KEY ("id_usuario") REFERENCES "usuarios" ("id_usuario") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "contas_a_receber" ADD FOREIGN KEY ("id_categoria") REFERENCES "categorias" ("id_categoria") DEFERRABLE INITIALLY IMMEDIATE;
